fix layout issue in project list

--- a/public/css/components/box.less
+++ b/public/css/components/box.less
@@ -4,11 +4,6 @@
   padding: 15px;
   margin: 15px 0;
   border: 1px solid transparent;
-
-  &:hover {
-    border: 1px solid #e5e5e5;
-    .border-radius(4px);
-  }
 }
 
 .box-img {
